--- a/package.json
+++ b/package.json
@@ -9,6 +9,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.16.6"
+    "@tailwindcss/vite": "^4.1.18",
+    "astro": "^5.16.6",
+    "clsx": "^2.1.1",
+    "daisyui": "^5.5.14",
+    "date-fns": "^4.1.0",
+    "lodash": "^4.17.21",
+    "tailwindcss": "^4.1.18"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.17.21"
   }
 }
