--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "@types/toastify-js": "^1.12.4",
     "astro": "^5.16.6",
     "clsx": "^2.1.1",
     "daisyui": "^5.5.14",
     "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "toastify-js": "^1.12.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.21"
