--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@tailwindcss/vite": "^4.1.18",
         "@types/toastify-js": "^1.12.4",
         "astro": "^5.16.6",
+        "astro-iconify": "^1.2.0",
         "clsx": "^2.1.1",
         "daisyui": "^5.5.14",
         "date-fns": "^4.1.0",
@@ -21,6 +22,7 @@
         "toastify-js": "^1.12.0"
     },
     "devDependencies": {
-        "@types/lodash": "^4.17.21"
+        "@types/lodash": "^4.17.21",
+        "tw-animate-css": "^1.4.0"
     }
 }
