--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
         "toastify-js": "^1.12.0"
     },
     "devDependencies": {
-        "@types/lodash": "^4.17.21",
-        "tw-animate-css": "^1.4.0"
+        "@types/lodash": "^4.17.21"
     }
 }
